{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 3,
  "lineage": "94014f8c-7ecb-cef6-7dc6-21f0def981c4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:vpc/vpc-0eea6ded02cc18b8d",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bacd04c5ec1d429f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-46b3252d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "cidr",
                "values": [
                  "10.0.0.0/16"
                ]
              }
            ],
            "id": "vpc-0eea6ded02cc18b8d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0931d87f70ade5f44",
            "owner_id": "968036092797",
            "state": "available",
            "tags": {
              "Name": "training-vpc",
              "kubernetes.io/cluster/training-vpc-1": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-0ab0c0d0b5e9630dc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ab0c0d0b5e9630dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20201214201813350500000001",
            "name_prefix": "all_worker_management",
            "owner_id": "968036092797",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-02f63106385ea3de9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02f63106385ea3de9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20201214201813350800000003",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "968036092797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker_group_mgmt_one"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:968036092797:security-group/sg-01ec6a932c5c50918",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01ec6a932c5c50918",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20201214201813350600000002",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "968036092797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "worker_group_mgmt_two"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eea6ded02cc18b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}